# SDEmatching

./: .gitignore  pyproject.toml  readme.md  readme_pypi.md  setup.py
SDEmatching/: __init__.py  datageneration.py  utils.py
SDEmatching/ConditionMappers/: TransformerConditionMapper.py
SDEmatching/ConditionalDistributions/: Flows.py
SDEmatching/core/: Diffusions.py  Marginal.py  SDE.py  SDEproblem.py
SDEmatching/distributions/: Emission.py  Prior.py
SDEmatching/models/: ConditionMappers.py  Flows.py  GaussianProcessDerivative.py
SDEmatching/utils/: datageneration.py  utils.py
examples/: GP_based_marginal.ipynb  Transformer_based_marginal.ipynb  Transformer_based_marginal.py  models.py  plot_functions.py
test/: GaussianProcessDerivative_test.py
