[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "SDEmatching"
version = "0.1.0"
description = "Scalable and simulation-free training of latent SDEs via score matching (Bartosh et al., 2025)"
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["stochastic differential equations", "score matching", "latent variable models", "time series", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gpytorch>=1.14",
    "matplotlib>=3.10",
    "normflows>=1.7",
    "numpy>=2.2",
    "pandas>=2.2",
    "seaborn>=0.13",
    "setuptools>=68",
    "torch>=2.5",
    "torchdyn>=1.0",
    "torchsde>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/simoneiriksson/SDEMatching"
Repository = "https://github.com/simoneiriksson/SDEMatching"
"Bug Tracker" = "https://github.com/simoneiriksson/SDEMatching/issues"
"Reference Paper" = "https://proceedings.mlr.press/v267/bartosh25a.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["SDEmatching*"]

[tool.ruff]
line-length = 100
target-version = "py310"
